version 1.1 updated log4j libraries and created Lucene 4.0 version